[gd_scene load_steps=36 format=3 uid="uid://bswk0hpl6ssgt"]

[ext_resource type="Script" uid="uid://dx88c45ewy3n4" path="res://namaz_vakti.gd" id="1_541iw"]
[ext_resource type="Texture2D" uid="uid://6ar64d1wr7c3" path="res://ArkaPlan.jpeg" id="2_8kn8o"]
[ext_resource type="Texture2D" uid="uid://dt86xyu7erx7d" path="res://icon/menu.png" id="3_n6naw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lojjy"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.384314, 0.384314, 0.384314, 1)
corner_radius_bottom_right = 30
expand_margin_right = 15.0

[sub_resource type="Theme" id="Theme_ufngp"]
Label/constants/outline_size = 10
Label/styles/normal = SubResource("StyleBoxFlat_lojjy")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kbhjx"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.384314, 0.384314, 0.384314, 1)
corner_radius_bottom_left = 30
expand_margin_left = 10.0

[sub_resource type="Theme" id="Theme_qkj6y"]
Label/constants/outline_size = 10
Label/styles/normal = SubResource("StyleBoxFlat_kbhjx")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h3iyh"]
bg_color = Color(0.176471, 0.176471, 0.176471, 0.784314)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.384314, 0.384314, 0.384314, 1)
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000
expand_margin_left = 80.0
expand_margin_top = 20.0
expand_margin_right = 80.0
expand_margin_bottom = 60.0

[sub_resource type="Theme" id="Theme_uwamq"]
Label/constants/outline_size = 10
Label/styles/normal = SubResource("StyleBoxFlat_h3iyh")

[sub_resource type="Theme" id="Theme_8fski"]
Label/constants/outline_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mialh"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.384314, 0.384314, 0.384314, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
expand_margin_left = 12.0
expand_margin_right = 12.0

[sub_resource type="Theme" id="Theme_ntbr2"]
Label/constants/outline_size = 10
Label/styles/normal = SubResource("StyleBoxFlat_mialh")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w64xj"]
bg_color = Color(0.176471, 0.176471, 0.176471, 0.784314)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.384314, 0.384314, 0.384314, 1)
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="Theme" id="Theme_ihsea"]
Label/styles/normal = SubResource("StyleBoxFlat_w64xj")

[sub_resource type="Theme" id="Theme_5ahf2"]
Label/constants/outline_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ws4kv"]
bg_color = Color(0.176471, 0.176471, 0.176471, 0.784314)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.384314, 0.384314, 0.384314, 1)
corner_radius_top_right = 50

[sub_resource type="Theme" id="Theme_1ua8v"]
Label/styles/normal = SubResource("StyleBoxFlat_ws4kv")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oagv4"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.384314, 0.384314, 0.384314, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wp725"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.384314, 0.384314, 0.384314, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7qinf"]
bg_color = Color(0.118581, 0.118581, 0.118581, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.384314, 0.384314, 0.384314, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_bottom = 3.0

[sub_resource type="Theme" id="Theme_eqey7"]
Button/constants/outline_size = 10
Button/styles/hover = SubResource("StyleBoxFlat_oagv4")
Button/styles/normal = SubResource("StyleBoxFlat_wp725")
Button/styles/pressed = SubResource("StyleBoxFlat_7qinf")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l5n03"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.384314, 0.384314, 0.384314, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n6naw"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.384314, 0.384314, 0.384314, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glcjo"]
bg_color = Color(0.133197, 0.133196, 0.133196, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.384314, 0.384314, 0.384314, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="Theme" id="Theme_ikoku"]
Button/constants/outline_size = 10
Button/styles/hover = SubResource("StyleBoxFlat_l5n03")
Button/styles/normal = SubResource("StyleBoxFlat_n6naw")
Button/styles/pressed = SubResource("StyleBoxFlat_glcjo")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qg4a3"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.384314, 0.384314, 0.384314, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q4h07"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.384314, 0.384314, 0.384314, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m26cs"]
bg_color = Color(0.125911, 0.125911, 0.125911, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.384314, 0.384314, 0.384314, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 1.0

[sub_resource type="Theme" id="Theme_34ii0"]
Button/constants/outline_size = 10
Button/styles/hover = SubResource("StyleBoxFlat_qg4a3")
Button/styles/normal = SubResource("StyleBoxFlat_q4h07")
Button/styles/pressed = SubResource("StyleBoxFlat_m26cs")

[sub_resource type="Animation" id="Animation_glcjo"]
resource_name = "Açılış"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Acılıs-Kapanıs-Ekran:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Acılıs-Kapanıs-Ekran:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_l5n03"]
resource_name = "AçılışKuran"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Acılıs-Kapanıs-Ekran:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Acılıs-Kapanıs-Ekran:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"KuranSahnesiGec"
}]
}

[sub_resource type="Animation" id="Animation_n6naw"]
resource_name = "AçılışZikir"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Acılıs-Kapanıs-Ekran:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Acılıs-Kapanıs-Ekran:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"ZikirSahnesineGec"
}]
}

[sub_resource type="Animation" id="Animation_7sukx"]
resource_name = "MenuAçma"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/MenuArka:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(11, 288), Vector2(203, 288)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/MenuArka:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.001, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/MenuButonları:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-187, 1035), Vector2(16, 1035)]
}

[sub_resource type="Animation" id="Animation_an63i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/MenuButonları:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-187, 792)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Acılıs-Kapanıs-Ekran:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Acılıs-Kapanıs-Ekran:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xe2l6"]
_data = {
&"Açılış": SubResource("Animation_glcjo"),
&"AçılışKuran": SubResource("Animation_l5n03"),
&"AçılışZikir": SubResource("Animation_n6naw"),
&"MenuAçma": SubResource("Animation_7sukx"),
&"RESET": SubResource("Animation_an63i")
}

[node name="namaz-vakti" type="Node2D"]
script = ExtResource("1_541iw")

[node name="ArkaPlan" type="Sprite2D" parent="."]
position = Vector2(360, 640.001)
scale = Vector2(1.40625, 1.66666)
texture = ExtResource("2_8kn8o")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 1280.0

[node name="Saat" type="Label" parent="Control"]
layout_mode = 1
offset_right = 89.0
offset_bottom = 52.0
theme = SubResource("Theme_ufngp")
theme_override_font_sizes/font_size = 30
text = "saat"

[node name="Tarih" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
theme = SubResource("Theme_qkj6y")
theme_override_font_sizes/font_size = 30
text = "tarih"

[node name="Hangi_Vakte_Kalan" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -266.0
offset_right = 45.0
offset_bottom = -214.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_uwamq")
theme_override_font_sizes/font_size = 30
text = "Kalan"

[node name="Vakte_Kalan" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -219.0
offset_right = 45.5
offset_bottom = -167.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_8fski")
theme_override_font_sizes/font_size = 30
text = "Kalan"

[node name="Hicri_takvim" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_ntbr2")
theme_override_font_sizes/font_size = 30
text = "Hicri takvim"

[node name="VakitlerArka" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.5
offset_top = -159.0
offset_right = 144.5
offset_bottom = 171.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ihsea")

[node name="Vakitler" type="GridContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -136.0
offset_right = 113.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_5ahf2")
columns = 2

[node name="İmsak_yazi" type="Label" parent="Control/Vakitler"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "İmsak  :"

[node name="İmsak" type="Label" parent="Control/Vakitler"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "İmsak"

[node name="Gunes_yazi" type="Label" parent="Control/Vakitler"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Güneş  :"

[node name="Gunes" type="Label" parent="Control/Vakitler"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Gunes"

[node name="Ogle_yazi" type="Label" parent="Control/Vakitler"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Öğle     :"

[node name="Ogle" type="Label" parent="Control/Vakitler"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Ogle"

[node name="İkındı_yazi" type="Label" parent="Control/Vakitler"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "İkindi   :"

[node name="İkındı" type="Label" parent="Control/Vakitler"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "İkindi"

[node name="Aksam_yazi" type="Label" parent="Control/Vakitler"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Akşam :"

[node name="Aksam" type="Label" parent="Control/Vakitler"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Aksam"

[node name="Yatsı_yazi" type="Label" parent="Control/Vakitler"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Yatsı    :"

[node name="Yatsı" type="Label" parent="Control/Vakitler"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Yatsi"

[node name="MenuArka" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -288.0
offset_right = 11.0
grow_vertical = 0
theme = SubResource("Theme_1ua8v")

[node name="Menu" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0263889
anchor_top = 0.925
anchor_right = 0.140278
anchor_bottom = 0.984375
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = SubResource("Theme_eqey7")
theme_override_font_sizes/font_size = 40
icon = ExtResource("3_n6naw")
icon_alignment = 1
text_direction = 2
metadata/_edit_use_anchors_ = true

[node name="MenuButonları" type="GridContainer" parent="Control"]
layout_mode = 0
offset_left = -187.0
offset_top = 792.0
offset_right = -18.0
offset_bottom = 951.0

[node name="Zikirmatik" type="Button" parent="Control/MenuButonları"]
layout_mode = 2
focus_mode = 0
theme = SubResource("Theme_ikoku")
theme_override_font_sizes/font_size = 25
text = "Zikirmatik"
icon_alignment = 1
text_direction = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Control/MenuButonları"]
layout_mode = 2

[node name="KuranıKerim" type="Button" parent="Control/MenuButonları"]
layout_mode = 2
focus_mode = 0
theme = SubResource("Theme_34ii0")
theme_override_font_sizes/font_size = 25
text = "Kuranı Kerim"
icon_alignment = 1
text_direction = 2
metadata/_edit_use_anchors_ = true

[node name="Acılıs-Kapanıs-Ekran" type="ColorRect" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xe2l6")
}
autoplay = "Açılış"

[connection signal="pressed" from="Control/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Control/MenuButonları/Zikirmatik" to="." method="_on_zikirmatik_pressed"]
[connection signal="pressed" from="Control/MenuButonları/KuranıKerim" to="." method="_on_kuranı_kerim_pressed"]
